--- a/package.json
+++ b/package.json
@@ -1,31 +1,16 @@
 {
-  "name": "wifi-collab",
-  "version": "1.0.0",
-  "description": "Collaborate on a file over wifi",
-  "main": "app.js",
+  "name": "code-over-wifi",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DanielOnGitHub17/code-over-wifi.git"
-  },
-  "keywords": [
-    "node",
-    "js",
-    "express",
-    "wifi",
-    "hotspot",
-    "collab",
-    "collaborate"
-  ],
-  "author": "DanielOnGitHub17",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DanielOnGitHub17/code-over-wifi/issues"
-  },
-  "homepage": "https://github.com/DanielOnGitHub17/code-over-wifi#readme",
   "dependencies": {
-    "express": "^4.21.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
