ran `npm install express`

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/DanielOnGitHub17/code-over-wifi/issues"
   },
-  "homepage": "https://github.com/DanielOnGitHub17/code-over-wifi#readme"
+  "homepage": "https://github.com/DanielOnGitHub17/code-over-wifi#readme",
+  "dependencies": {
+    "express": "^4.21.0"
+  }
 }
