--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,6 @@
-# Node.js
 node_modules/
-
-# Logs
-logs
+build/
+dist/
+.env
 *.log
-npm-debug.log*
-
-# Dependency directories
-pids
-logs
-*.pid
-*.seed
-*.pid.lock
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Environment variables
-.env*
+coverage/
