--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/DanielOnGitHub17/code-over-wifi/issues"
   },
-  "homepage": "https://github.com/DanielOnGitHub17/code-over-wifi#readme"
+  "homepage": "https://github.com/DanielOnGitHub17/code-over-wifi#readme",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
